
Key to developers
-----------------

- DP   Dave Page
- AP   Andreas Pflug
- JMP  Jean-Michel Poure
- HS   Hiroshi Saito
- AHP  Adam H. Pendleton
- MP   Marc Persuy
- DAP  Darko Prenosil
- FGP  Florian G. Pflug
- MH   Magnus Hagander

Changes
-------

Date       Dev Ver    Change details
---------- --- -----  --------------
2006-09-15 DP  1.6.0  When exporting data to the local charset wxFile::Write 
                      will crash if it can't convert the data. Check that
                      conversion is possible before writing each row and skip 
                      if not. If any failures have occured, tell the user how 
                      many, and suggest they use UTF8 instead. Per Harald 
                      Armin Massa
2006-09-11 DP  1.6.0  Add support for building indexes concurrently on 8.2.
2006-09-08 DP  1.6.0  Use SQL standard type names where appropriate. Show
                      them as 'aliases' in the browser. [Magnus Hagander/
                      Dave Page]
2006-09-06 DP  1.6.0  The RULE privilege is not applicable to tables in 8.2
                      so don't use it.
2006-09-01 DP  1.6.0  Add support for building Mac Universal Binaries.
                      With help from Florian G. Pflug and Chris Campbell.
2006-08-30 DP  1.6.0  Fix maintenance dialogue for Primary Keys and Unique
                      constraints per Alexander Kirpa
2006-08-30 DP  1.6.0  Favour a primary key over an OID column when updating
                      data in the edit grid to benefit from the index, per
                      Vivek Khera.
2006-08-30 DP  1.6.0  Require the use of wxWidgets 2.7 or above (needed for the
                      wxAUI classes.
2006-08-30 DP  1.6.0  Use the wxAUI library to provide dockable window elements
                      on the main window, query tool and edit grid, giving
                      us a much more modern look and feel.
2006-08-30 MH  1.6.0  Allow for -q to open query tool without opening