@@ -35,6 +35,8 @@ Changes
 
 Date       Dev Ver    Change details
 ---------- --- -----  --------------
+2006-09-28 DP  1.6.0  Ensure the schema is specified when backing up individual
+                      tables [Luca Arzeni]
 2006-09-15 DP  1.6.0  When exporting data to the local charset wxFile::Write 
                       will crash if it can't convert the data. Check that
                       conversion is possible before writing each row and skip 
